--- a/package.xml
+++ b/package.xml
@@ -4,8 +4,8 @@
   <name>sensopart_interfaces</name>
   <version>0.1.0</version>
   <description>Message definitions for SensoPart VISOR cameras.</description>
-  <maintainer email="rlh@teknologisk.dk">rlh</maintainer>
-  <license>No License</license>
+  <maintainer email="fpfeifer@stud.hs-heilbronn.de">rlh</maintainer>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
@@ -13,6 +13,7 @@
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>builtin_interfaces</depend>
+  <depend>geometry_msgs</depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
 
